name:                showtime
version:             0.1
synopsis:            An implementation and verification of the showtime algorithm
description:         An implementation and verification of the showtime algorithm.
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
-- copyright:
category:            Parallelism
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.3
                   , GHC == 8.6.1

source-repository head
  type:     git
  location: https://github.com/iu-parfunc/showtime

library
  exposed-modules:     Showtime.Original
                       Showtime.Verified.Lattice
                       Showtime.Verified.Vec
  build-depends:       base           >= 4.10  && < 4.13
                     , containers     >= 0.5   && < 0.7
                     , lattices       >= 1.7   && < 1.8
                     , singletons     >= 2.4   && < 2.6
                     , singleton-nats >= 0.4.1 && < 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unticked-promoted-constructors

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Showtime.OriginalSpec
  build-depends:       base       >= 4.10 && < 4.13
                     , hspec      >= 2    && < 3
                     , QuickCheck >= 2.10 && < 2.13
                     , showtime
  build-tool-depends:  hspec-discover:hspec-discover >= 2 && < 3
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
